--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,120 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardview"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="300dp">
-
-        <TextView
-            android:textSize="15dp"
-            android:textStyle="italic"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:id="@+id/msg_TV"
-            android:text="@string/Msg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:textSize="15dp"
-            android:textStyle="italic"
-            android:layout_marginLeft="95dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="30dp"
-            android:id="@+id/code_TV"
-            android:text="@string/code"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    android:background="@color/colorback"
+    tools:context=".LoginActivity"
+    >
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/phone_TV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:text="+91"
-                android:textSize="19dp"
-                android:textStyle="italic" />
-
-            <EditText
-                android:id="@+id/phone_ET"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="Phone Number"
-                android:inputType="number"
-                android:textSize="19dp"
-                android:textStyle="italic" />
-
-        </LinearLayout>
-
-        <TextView
-
-            android:layout_marginTop="150dp"
-            android:id="@+id/get_TV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:text="@string/get"
-            android:textSize="13dp"
-            android:textStyle="italic" />
-
-
-        <Button
-
-            android:layout_marginTop="180dp"
-            android:id="@+id/enter_BTN"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:background="#f9f7f6"
-            android:layout_marginLeft="100dp"
-            android:text=" Enter code"
-            android:textSize="15dp"
-            android:textStyle="italic" />
-
-        <Button
-            android:layout_marginTop="250dp"
-            android:id="@+id/next_BTN"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=" Next"
-            android:background="#b9b2b2"
-            android:textColor="#f9f7f6"
-            android:textSize="15dp"
-            android:textStyle="italic" />
-
-    </android.support.v7.widget.CardView>
-
-    <Button
-        android:layout_marginTop="40dp"
-        android:id="@+id/caller_BTN"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#6894ec"
-        android:textColor="#f9f7f6"
-        android:text="@string/caller"
-        android:textSize="15dp"
-        android:textStyle="italic" />
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25sp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/toolbar"
+
+        >
+        <LinearLayout
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:paddingBottom="5dp"
+                android:paddingRight="5dp"
+                android:textStyle="italic"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:textColor="@color/white_greyish"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
+                android:textSize="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Enter Details Here"
+
+                />
+
+            <EditText
+                android:id="@+id/edit_email"
+                android:inputType="textEmailAddress"
+                android:layout_marginTop="35dp"
+                android:paddingRight="8dp"
+                android:paddingLeft="8dp"
+                android:textSize="15dp"
+                android:textColorHint="@color/white"
+                android:textStyle="italic"
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="Email ID"/>
+            <EditText
+                android:id="@+id/edit_Passwword"
+                android:inputType="textPassword"
+                android:layout_marginTop="25dp"
+                android:paddingBottom="5dp"
+                android:paddingRight="8dp"
+                android:paddingLeft="8dp"
+                android:textColorHint="@color/white"
+                android:textStyle="italic"
+                android:paddingTop="5dp"
+                android:textSize="15dp"
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="Password"/>
+            <LinearLayout
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <CheckBox
+                    android:id="@+id/login_checkbox"
+                    android:layout_marginTop="25dp"
+                    android:layout_weight="1"
+                    android:paddingBottom="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingLeft="5dp"
+                    android:textStyle="italic"
+                    android:paddingTop="5dp"
+                    android:textColor="@color/white_greyish"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Remember me"/>
+                <TextView
+                    android:layout_marginTop="25dp"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="5dp"
+                    android:paddingRight="5dp"
+                    android:textStyle="italic"
+                    android:paddingLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:textColor="@color/white_greyish"
+                    android:text="Forget Your Password" />
+            </LinearLayout>
+            <Button
+                android:id="@+id/loginButton"
+                android:paddingBottom="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:background="@color/primary_darker"
+                android:textAllCaps="false"
+                android:textSize="15dp"
+                android:textColor="@color/white_greyish"
+                android:layout_marginTop="55dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Log in"
+                android:textStyle="italic"/>
 
 
 
-</LinearLayout>
+
+
+            <Button
+                android:id="@+id/sign_in_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:background="@color/primary_darker"
+                android:paddingBottom="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:text="Sign in with Google"
+                android:textAllCaps="false"
+                android:textColor="@color/white_greyish"
+                android:textSize="15dp"
+                android:textStyle="italic" />
+
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:layout_marginLeft="70dp"
+                    android:layout_marginTop="10dp"
+                    android:textStyle="italic"
+                    android:textSize="15sp"
+                    android:textColor="@color/white_greyish"
+                    android:id="@+id/new_user"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:text="New Member?" />
+
+                <TextView
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:textStyle="bold"
+                    android:textSize="15sp"
+                    android:textColor="@color/white_greyish"
+                    android:id="@+id/register_tv"
+                    android:layout_width="93dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="5dp"
+                    android:text="Sign Up!" />
+
+            </LinearLayout>
+
+
+
+            <!--
+                        <com.facebook.login.widget.LoginButton
+                            android:id="@+id/login_button"
+                            android:paddingBottom="5dp"
+                            android:paddingTop="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="30dp"
+                            android:visibility="gone"
+                            android:layout_marginBottom="10dp" />
+                        -->
+        </LinearLayout>
+
+    </RelativeLayout>
+
+
+
+</RelativeLayout>
