--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,118 +3,153 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+
     tools:context=".LoginActivity">
+
+
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardview"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/editborder"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
 
-        <TextView
-            android:textSize="15dp"
-            android:textStyle="italic"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:id="@+id/msg_TV"
-            android:text="@string/Msg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:textSize="15dp"
-            android:textStyle="italic"
-            android:layout_marginLeft="95dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="30dp"
-            android:id="@+id/code_TV"
-            android:text="@string/code"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:layout_marginTop="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginLeft="1dp"
+            android:background="#f1f0f0"
+
+            >
 
             <TextView
-                android:id="@+id/phone_TV"
+                android:id="@+id/msg_TV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:text="+91"
-                android:textSize="19dp"
-                android:textStyle="italic" />
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_marginTop="15dp"
+                android:text="@string/Msg"
+                android:textSize="14dp"
+                 />
 
-            <EditText
-                android:id="@+id/phone_ET"
+            <TextView
+               android:layout_gravity="center"
+                android:id="@+id/code_TV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Phone Number"
-                android:inputType="number"
-                android:textSize="19dp"
-                android:textStyle="italic" />
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="@string/code"
+                android:textSize="14dp"
+                 />
 
+
+            <LinearLayout
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp">
+
+                <TextView
+                    android:id="@+id/phone_TV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:text="+91"
+                    android:textSize="19dp"
+                    android:textStyle="italic" />
+
+                <EditText
+                    android:id="@+id/phone_ET"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:hint="  Phone Number"
+                    android:inputType="number"
+                    android:textSize="19dp"
+                    android:layout_marginLeft="15dp"
+
+                     />
+
+            </LinearLayout>
         </LinearLayout>
-
-        <TextView
-
-            android:layout_marginTop="150dp"
-            android:id="@+id/get_TV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:text="@string/get"
-            android:textSize="13dp"
-            android:textStyle="italic" />
-
-
-        <Button
-
-            android:layout_marginTop="180dp"
-            android:id="@+id/enter_BTN"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:background="#f9f7f6"
-            android:layout_marginLeft="100dp"
-            android:text=" Enter code"
-            android:textSize="15dp"
-            android:textStyle="italic" />
-
-        <Button
-            android:layout_marginTop="250dp"
-            android:id="@+id/next_BTN"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=" Next"
-            android:background="#b9b2b2"
-            android:textColor="#f9f7f6"
-            android:textSize="15dp"
-            android:textStyle="italic" />
-
     </android.support.v7.widget.CardView>
 
-    <Button
-        android:layout_marginTop="40dp"
-        android:id="@+id/caller_BTN"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#6894ec"
-        android:textColor="#f9f7f6"
-        android:text="@string/caller"
-        android:textSize="15dp"
-        android:textStyle="italic" />
+        <android.support.v7.widget.CardView
+          android:layout_marginTop="5dp"
+            android:id="@+id/cardview1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            >
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#f1f0f0"
+                android:layout_marginRight="1dp"
+                android:layout_marginLeft="1dp">
 
 
+                <TextView
+                    android:gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/get_TV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:text="@string/get"
+                    android:textSize="14dp"
+                    />
+
+
+                <EditText
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/enter_code"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/editborder"
+                    android:hint=" Enter code"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:id="@+id/next_BTN"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#5C6ac4"
+                    android:text=" Next"
+                    android:textColor="#f9f7f6"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+
+
+
+
+            </LinearLayout>
+
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
