--- a/app/src/main/res/layout/activity_skip.xml
+++ b/app/src/main/res/layout/activity_skip.xml
@@ -6,11 +6,19 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".SkipActivity">
+    <ImageView
 
+        android:layout_marginTop="150dp"
+        android:layout_gravity="center"
+        android:id="@+id/locationnn"
+        android:background="@drawable/shoping"
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
     <TextView
         android:id="@+id/skip_tv"
         android:gravity="center"
-        android:layout_marginTop="500dp"
+        android:textSize="@dimen/text_margins"
+        android:layout_marginTop="40dp"
         android:text="Skip"
         android:textStyle="bold"
         android:layout_width="match_parent"
