--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -22,22 +22,24 @@
         android:layout_width="match_parent"
         android:layout_height="40dp" />
     <TextView
-        android:layout_marginTop="70dp"
+
         android:gravity="center"
         android:textColor="@color/textcolor"
         android:text="@string/text2"
         android:textSize="16dp"
         android:layout_width="match_parent"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"
+        android:layout_marginTop="70dp"
+        />
 
     <Button
 
         android:layout_marginTop="10dp"
         android:id="@+id/location_BTN"
         android:text="@string/text_button"
-        android:textColor="@color/textbutton_color"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
+        android:textColor="@color/textbutton_color"
         android:background="@drawable/roundedbutton"
         android:layout_width="match_parent"
         android:layout_height="40dp" />
