--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,12 +10,13 @@
 
 
 
-    <TextView
-        android:textSize="30dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="300dp"
-        android:text="Splash Screen"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <ImageView
+
+        android:layout_marginTop="200dp"
+      android:layout_gravity="center"
+        android:id="@+id/locationnn"
+        android:background="@drawable/logo"
+        android:layout_width="150dp"
+        android:layout_height="150dp" />
 
 </LinearLayout>
