--- a/app/src/main/res/layout/activity_skip.xml
+++ b/app/src/main/res/layout/activity_skip.xml
@@ -10,8 +10,9 @@
     <TextView
         android:id="@+id/skip_tv"
         android:gravity="center"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="150dp"
         android:text="Skip"
+        android:textSize="20dp"
         android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
