--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -77,6 +77,16 @@
                 android:icon="@drawable/ic_menu_share"
                 android:title="Share" />
 
+            <item
+                android:id="@+id/nav_aboutus"
+                android:icon="@drawable/ic_settings"
+                android:title="About Us" />
+
+            <item
+                android:id="@+id/nav_release"
+                android:icon="@drawable/ic_settings"
+                android:title="About This Release" />
+
         </menu>
     </item>
 
