--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,12 @@
     <color name="white">#FFFFFF</color>
     <color name="primary">#E43F3F</color>
 
+    <color name="smart">#079aaa</color>
+    <color name="exclusive">#3c3b3b</color>
+    <color name="nav_color">#ffe198</color>
+    <color name="nav_welcolor">#dedbdb</color>
+    <color name="member">#918f8f</color>
+    <color name="nav_colors">#ffd25d</color>
 
 
 </resources>
