show progress dialog

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,7 @@
                 android:inputType="textEmailAddress"
                 android:layout_marginTop="20dp"
                 android:textSize="15dp"
+                android:text="mohan123@gmail.com"
                 android:textColor="@color/colorPrimary"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -48,6 +49,7 @@
                 android:inputType="textPassword"
                 android:layout_marginTop="25dp"
                 android:textSize="15dp"
+                android:text="12345678"
                 android:textColor="@color/colorPrimary"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
