--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,7 +8,7 @@
 
         <item
             android:id="@+id/nav_location"
-            android:icon="@drawable/ic_location"
+            android:icon="@drawable/search_location"
             android:title="Location" />
 
 
