--- a/app/src/main/res/layout/activity_nearby_location.xml
+++ b/app/src/main/res/layout/activity_nearby_location.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/colorGray"
     tools:context=".NearbyLocationActivity">
 
     <android:android.support.v7.widget.Toolbar
@@ -13,8 +15,31 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         app:theme="@style/ThemeOverlay.AppCompat.Dark" />
-
+    <LinearLayout
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="30dp"
+        android:background="@color/colorAccent"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="50dp">
+        <ImageView
+            android:layout_marginLeft="20dp"
+            android:id="@+id/location"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_my_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:textColor="@color/location_color"
+            android:layout_marginLeft="20dp"
+            android:layout_gravity="center"
+            android:text="@string/use_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <ListView
+        android:layout_marginTop="10dp"
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,4 +53,4 @@
         android:text="No Results"
         android:textSize="20sp"
         android:visibility="gone" />
-</RelativeLayout>
+</LinearLayout>
