--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -25,6 +25,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/catagoryBTN"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -34,6 +35,7 @@
                 android:textColor="#000" />
 
             <Button
+                android:id="@+id/searchBTN"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
