--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -90,7 +90,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
                     android:hint="Email"
-                    android:text="rb@gmail.com"
+                    android:text="gkishan832@gmail.com"
                     android:textSize="15dp" />
 
                 <EditText
@@ -100,7 +100,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
-                    android:text="dagvgvcdhgvd"
+                    android:text="kishan123"
                     android:hint="Password"
                     android:textSize="15dp" />
 
