--- a/app/src/main/res/layout/activity_categorie.xml
+++ b/app/src/main/res/layout/activity_categorie.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".categorie">
+    tools:context=".Activities.categorie">
 
       <android.support.v7.widget.CardView
             android:layout_width="match_parent"
