--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".Activities.LoginActivity">
 
     <ImageView
-        android:layout_marginLeft="120dp"
+
         android:layout_marginTop="20dp"
         android:id="@+id/locationnn"
+        android:layout_gravity="center"
         android:background="@drawable/logo"
         android:layout_width="80dp"
         android:layout_height="80dp" />
     <LinearLayout
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="130dp"
+            android:layout_marginTop="50dp"
             android:background="@color/nav_welcolor"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -118,7 +120,7 @@
                         -->
         </LinearLayout>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 
