--- a/app/src/main/res/layout/activity_nearby_location.xml
+++ b/app/src/main/res/layout/activity_nearby_location.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorGray"
-    tools:context=".NearbyLocationActivity">
+    tools:context=".Activities.NearbyLocationActivity">
 
     <android:android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
