--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -26,24 +26,24 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
                 <Button
                     android:id="@+id/first"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Categories"
-                    android:textSize="20dp"
+                    android:text="@string/categories"
+                    android:textSize="12dp"
                     android:textStyle="bold"/>
                 <Button
+                    android:drawableLeft="@drawable/ic_search"
                     android:id="@+id/second"
                     android:layout_weight="1"
-                    android:textSize="20dp"
+                    android:textSize="12dp"
                     android:textStyle="bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Search"/>
+                    android:text="@string/search_product"/>
 
             </LinearLayout>
 
