--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,9 @@
     <color name="member">#918f8f</color>
     <color name="nav_colors">#ffd25d</color>
     <color name="location_color">#FF000000</color>
+    <color name="card_color">#9B9595</color>
+    <color name="off_color">#07A50D</color>
+
+    <color name="colorBlack">#000</color>
 
 </resources>
