--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -27,19 +27,24 @@
         android:textSize="@dimen/text_margins"
         android:layout_width="match_parent"
         android:layout_height="40dp" />
-    <TextView
 
+
+
+    <View
+        android:layout_marginTop="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="5px"
+        android:background="@color/view_color" />
+    <TextView
         android:gravity="center"
         android:textColor="@color/textcolor"
         android:text="@string/text2"
         android:textSize="16dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="70dp"
-        />
+        android:layout_marginTop="40dp"/>
 
     <Button
-
         android:layout_marginTop="10dp"
         android:id="@+id/location_BTN"
         android:text="@string/text_button"
