--- a/app/src/main/res/layout/activity_my_card.xml
+++ b/app/src/main/res/layout/activity_my_card.xml
@@ -9,11 +9,11 @@
     tools:context=".Activities.MyCardActivity">
 
     <ImageView
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="100dp"
         android:id="@+id/locationnn"
         android:background="@drawable/cart"
         android:layout_width="match_parent"
-        android:layout_height="350dp" />
+        android:layout_height="200dp" />
 
     <TextView
         android:id="@+id/item_TV"
@@ -41,7 +41,7 @@
         android:layout_width="130dp"
         android:layout_height="40dp"
         android:textColor="@color/textbutton_color"
-        android:background="@color/text_color"
+        android:background="@drawable/roundedbutton"
         android:layout_marginLeft="130dp"
         android:text=" Start Shopping"
         android:textSize="13dp"
