--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -13,10 +13,12 @@
             android:id="@+id/pager"
             android:layout_marginTop="40dp"
             android:layout_marginLeft="90dp"
+
             android:layout_width="200dp"
             android:layout_height="150dp" />
         <me.relex.circleindicator.CircleIndicator
             android:id="@+id/indicator"
+            app:strokeColor="#D57518"
             android:layout_width="match_parent"
             android:layout_height="48dp" />
         <View
@@ -30,9 +32,9 @@
             android:text="21% OFF"
             android:textColor="@color/white"
             android:background="#80C533"
-            android:layout_width="80dp"
+            android:layout_width="70dp"
             android:layout_marginLeft="10dp"
-            android:layout_height="30dp"
+            android:layout_height="20dp"
             android:layout_marginBottom="20dp"/>
         <TextView
             android:text="Chakki Fresh Atta"
@@ -66,16 +68,18 @@
                 android:textSize="14dp"
                 android:text="Rs330" />
 
-            <Button
-                android:id="@+id/addBTN1"
-                android:text="ADD"
-                android:textColor="@color/white"
-                android:drawableRight="@drawable/ic_add"
-                android:background="@color/text_color"
-                android:layout_width="100dp"
+
+
+
+            <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
+                android:id="@+id/mybutton"
                 android:layout_marginLeft="120dp"
-                android:layout_height="30dp"
-               />
+                android:layout_centerVertical="true"
+                android:layout_width="110dp"
+                app:backGroundColor="@color/text_color"
+                android:layout_height="30dp">
+
+            </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
         </LinearLayout>
 
         <LinearLayout
@@ -179,11 +183,210 @@
             android:background="#987"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"/>
+
+
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Highlight"
+                android:textSize="16dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="normal" />
+
+            <TextView
+                android:id="@+id/infoTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:textSize="14dp"
+                android:text="Info" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#987" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:textSize="16dp"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="normal" />
+
+
+            <ImageView
+                android:gravity="center"
+                android:background="@drawable/ic_uparrow"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="240dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dscrption_text"
+            android:textSize="12dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/exclusive"
+            android:textStyle="normal"
+            android:layout_marginBottom="10dp"/>
+
+        <View
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#987" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Key Features"
+                android:textSize="15dp"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="normal" />
+
+
+            <ImageView
+                android:gravity="center"
+                android:background="@drawable/ic_uparrow"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="240dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_feature"
+            android:textSize="12dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/exclusive"
+            android:textStyle="normal"
+            android:layout_marginBottom="10dp"/>
+
+        <View
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#987" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Unit"
+                android:textSize="16dp"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="normal" />
+
+
+            <ImageView
+                android:gravity="center"
+                android:background="@drawable/ic_uparrow"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="290dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="10 kg"
+            android:textSize="12dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/exclusive"
+            android:textStyle="normal"
+            android:layout_marginBottom="10dp"/>
+
+        <View
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#987" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Disclaimer"
+                android:textSize="16dp"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="normal" />
+
+
+            <ImageView
+                android:gravity="center"
+                android:background="@drawable/ic_uparrow"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="240dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/disclaimer_text"
+            android:textSize="12dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/exclusive"
+            android:textStyle="normal"
+            android:layout_marginBottom="10dp"/>
+
     </LinearLayout>
-
-
-
-
-
-
 </ScrollView>
