add elegent button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,5 @@
     <color name="off_color">#07A50D</color>
     <color name="view_color">#E0DCDC</color>
     <color name="colorBlack">#000</color>
-
+    <color name="color_lightt">#857C7C</color>
 </resources>
