--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -14,11 +14,6 @@
             android:id="@+id/pager"
             android:layout_marginTop="40dp"
             android:layout_marginLeft="90dp"
-
-
-
-
-
             android:layout_width="200dp"
             android:layout_height="150dp" />
         <me.relex.circleindicator.CircleIndicator
@@ -29,14 +24,14 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="#987"/>
+            android:background="@color/view_color1"/>
 
         <Button
             android:layout_marginTop="20dp"
             android:id="@+id/addBTN"
             android:text="21% OFF"
             android:textColor="@color/white"
-            android:background="#4caf1b"
+            android:background="@color/button_back"
             android:layout_width="70dp"
             android:layout_marginLeft="10dp"
             android:layout_height="20dp"
@@ -49,6 +44,7 @@
             android:textSize="14dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -90,7 +86,7 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:background="#eefafc"
+            android:background="@color/shadow"
             android:layout_marginTop="40dp"
             android:layout_height="40dp">
 
@@ -107,11 +103,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Price for Club Members: Rs254"
+                android:text="@string/textt"
                 android:layout_gravity="center"
                 android:textSize="12dp"
                 android:layout_marginLeft="10dp"
-                android:textColor="#3baeb4"
+                android:textColor="@color/skyy"
                 android:textStyle="bold" />
             <ImageView
                 android:id="@+id/lockIMG"
@@ -125,7 +121,7 @@
                 android:text="Unlock Price"
                 android:id="@+id/IMG"
                android:textSize="12dp"
-                android:textColor="#857C7C"
+                android:textColor="@color/shad"
                 android:layout_marginLeft="10dp"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
@@ -141,7 +137,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="#987"
+            android:background="@color/view_color1"
             android:layout_marginTop="20dp" />
 
         <TextView
@@ -185,7 +181,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:background="#987"
+            android:background="@color/view_color1"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"/>
 
@@ -221,177 +217,15 @@
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="#987" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Description"
-                android:textSize="16dp"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/colorBlack"
-                android:textStyle="normal" />
-
-
-            <ImageView
-                android:gravity="center"
-                android:background="@drawable/ic_uparrow"
-                android:layout_width="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="240dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dscrption_text"
-            android:textSize="12dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/exclusive"
-            android:textStyle="normal"
-            android:layout_marginBottom="10dp"/>
-
-        <View
-            android:layout_marginTop="10dp"
+            android:background="@color/view_color1" />
+        <ExpandableListView
+            android:id="@+id/expandableListView"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#987" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Key Features"
-                android:textSize="15dp"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/colorBlack"
-                android:textStyle="normal" />
-
-
-            <ImageView
-                android:gravity="center"
-                android:background="@drawable/ic_uparrow"
-                android:layout_width="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="240dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/key_feature"
-            android:textSize="12dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/exclusive"
-            android:textStyle="normal"
-            android:layout_marginBottom="10dp"/>
-
-        <View
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#987" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Unit"
-                android:textSize="16dp"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/colorBlack"
-                android:textStyle="normal" />
-
-
-            <ImageView
-                android:gravity="center"
-                android:background="@drawable/ic_uparrow"
-                android:layout_width="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="290dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10 kg"
-            android:textSize="12dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/exclusive"
-            android:textStyle="normal"
-            android:layout_marginBottom="10dp"/>
-
-        <View
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#987" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Disclaimer"
-                android:textSize="16dp"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/colorBlack"
-                android:textStyle="normal" />
-
-
-            <ImageView
-                android:gravity="center"
-                android:background="@drawable/ic_uparrow"
-                android:layout_width="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="240dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/disclaimer_text"
-            android:textSize="12dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/exclusive"
-            android:textStyle="normal"
-            android:layout_marginBottom="10dp"/>
-
+            android:layout_height="400dp"
+            android:divider="@android:color/darker_gray"
+            android:dividerHeight="0.5dp"
+            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />
     </LinearLayout>
+
+
 </ScrollView>
