--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -13,8 +13,9 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
             android:layout_marginTop="40dp"
-            android:layout_marginLeft="90dp"
-            android:layout_width="200dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginLeft="50dp"
+            android:layout_width="match_parent"
             android:layout_height="150dp" />
         <me.relex.circleindicator.CircleIndicator
             android:id="@+id/indicator"
