--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -85,6 +85,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/priceID"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:background="@color/shadow"
